--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "idb": "^8.0.0",
+    "@vlcn.io/crsqlite-wasm": "^0.16.0",
     "lit": "^3.2.1",
     "nanoid": "^5.0.7"
   },
@@ -17,5 +17,12 @@
     "eslint": "^9.13.0",
     "typescript": "~5.6.2",
     "vite": "^5.4.9"
+  },
+  "unused": {
+    "dependencies": {
+      "idb": "^8.0.0"
+    },
+    "devDependencies": {
+    }
   }
 }
